Thu Nov 10 23:17:45 1994  Peter Schauer  (pes@regent.e-technik.tu-muenchen.de)

	* symfile.c (syms_from_objfile): Only call find_lowest_section if
	no ".text" section exists.

Thu Nov 10 15:16:21 1994  Rob Savoye  <rob@rtl.cygnus.com>

	* rom68k-rom.c: New file. Replaces the old remote-mon.c and uses
	the new generic ROM interface in monitor.c.
	* config/m68k/monitor.mt: Use new ROM support.
	* monitor.c: Add support for xmodem download protocol.

Wed Nov  9 18:46:24 1994  Stan Shebs  (shebs@andros.cygnus.com)

	* findvar.c (find_saved_register): Fix a frame variable name.
	* infcmd.c (finish_command): Ditto.

Tue Nov  8 13:20:14 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* TODO: Remove "Watchpoints seem not entirely reliable, though
	they haven't failed me recently." item--this old (4.6 at least)
	item is too vague to be useful (some watchpoint bugs have been
	fixed since then).
	* TODO: Add explanation of "RPC interface" item.

Mon Nov  7 22:25:21 1994  Jeff Law  (law@snake.cs.utah.edu)

	* hppa-tdep.c (read_unwind_info): Use "text_offset" for linker
	stub unwind descriptors too.

	* Enable backtracing from inside a SOM shared library back into
	user code.
	* hppa-tdep.c (internalize_unwinds): Accept and use new
	"text_offset" argument for dynamic relocation of
	region_{start,end} fields in the unwind descriptor.
	(read_unwind_info): Pass text_offset to internalize unwinds.

Mon Nov  7 14:34:42 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* m3-nat.c: Remove comments about arbitrary limit in
	printf_filtered; that limit is gone.

Mon Nov  7 00:27:16 1994  Jeff Law  (law@snake.cs.utah.edu)

	* Beginnings of SOM shared library support.  Breakpoints and
	single frame backtracing within the library only.  Only works when
	using the HPUX 9 dynamic linker.  More functionality to be added
	soon.

	* somsolib.c, somsolib.h: New files.
	* Makefile.in (HFILES_NO_SRCDIR): Add somsolib.h
	(ALLDEPFILES): Add somsolib.c.
	(somsolib.o): Add some dependencies.