@@ -1,3 +1,12 @@
+Fri Nov 11 10:51:07 1994  Jeff Law  (law@snake.cs.utah.edu)
+
+	* hppa-tdep.c (rp_saved): Handle IMPORT stubs too.
+
+	* somsolib.c (som_solib_add): Check the value of __dld_flags, if
+	it indicates __dld_list is not valid return an error.  If it
+	indicates that libraries were not mapped privately, issue a
+	warning.
+
 Thu Nov 10 23:17:45 1994  Peter Schauer  (pes@regent.e-technik.tu-muenchen.de)
 
 	* symfile.c (syms_from_objfile): Only call find_lowest_section if
